# Crud-API

./: main.py  pyproject.toml
agent/: sql_agent.py
app/: database.py  db_queries.py  main.py  models.py  schemas.py
app/routers/: videos.py
