[project]
name = "video-api-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "openai>=2.26.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
